# openDEM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  animate.py  doxygen.conf
src/: CMakeLists.txt  analysis.c  analysis.h  animate.c  animate2.c  animate3.c  animate4.c  debug.c  debug.h  dem  gtk_ex  gtk_ex.c  gtk_ex2  gtk_ex2.c  main.c  particle.c  particle.h  record.c  record.h
